[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = "1"

futures = { version = "0.3", features = ["thread-pool"] }
pin-project-lite = "0.2"

static_assertions = "1.0"

thiserror = "1"
anyhow = "1"

log = "0.4"
env_logger = "0.9"

fnv = "1"

bincode = "2.0.0-rc.1"
bincode_derive = "2.0.0-rc.1"

wgpu = "0.14.2"
sdl2 = { git = "https://github.com/Rust-SDL2/rust-sdl2", features = ["bundled", "raw-window-handle"] }
raw-window-handle = "0.5.0"
